<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="#21212C">

    <ImageView
        android:id="@+id/ivPokeballSpl"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/pokeball_splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767"
        app:srcCompat="@drawable/pokeball_s" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokedex_logo"
        android:contentDescription="@string/logo_pokedex_splash" />

    <ImageView
        android:id="@+id/ivGengar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gengar"
        android:contentDescription="@string/imagen_gengar_sin_brillo" />

    <ImageView
        android:id="@+id/ivGengarS"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gengar_s"
        android:contentDescription="@string/imagen_gengar_con_brillo" />
</androidx.constraintlayout.widget.ConstraintLayout>